# school_projects

C2_s21_stringplus-3-develop/: README_RUS.md
C2_s21_stringplus-3-develop/materials/tests_in_docker/: Dockerfile  README.md  build.sh  run.sh
C2_s21_stringplus-3-develop/materials/tests_in_docker/entrypoint/: docker_entrypoint.sh
C2_s21_stringplus-3-develop/src/: Makefile  s21_libs.c  s21_memchr.c  s21_memcmp.c  s21_memcpy.c  s21_sprintf.c  s21_sscanf.c  s21_strcat.c  s21_strchr.c  s21_strerror.c  s21_string.h  s21_strlen.c  s21_strncat.c  s21_strncmp.c  s21_strpbrk.c  s21_strrchr.c  s21_strstr.c  s21_strtok.c  s21_to_lower.c  s21_trim.c
C2_s21_stringplus-3-develop/src/tests/: s21_test.c  s21_test.h  suite_s21_sscanf_c.c  suite_s21_sscanf_n.c  suite_s21_sscanf_o.c  test_insert.c  test_memchr.c  test_memcpy.c  test_memset.c  test_sprintf_e.c  test_sprintf_f.c  test_sprintf_g.c  test_sprintf_hex1.c  test_sprintf_hex2.c  test_sprintf_n.c  test_sprintf_unsigned.c  test_strcspn.c  test_strerror.c  test_strlen.c  test_strpbrk.c  test_strrchr.c  test_strtok.c
C6_s21_matrix-2-develop/: README_RUS.md
C6_s21_matrix-2-develop/src/: Makefile  s21_additional_func.c  s21_calc_complements.c  s21_create_matrix.c  s21_determinant.c  s21_eq_matrix.c  s21_inverse_matrix.c  s21_matrix.h  s21_mult_matrix.c  s21_mult_number.c  s21_remove_matrix.c  s21_sub_matrix.c  s21_sum_matrix.c  s21_transpose.c
C6_s21_matrix-2-develop/src/tests/: generate_numberc.c  s21_test.c  s21_test.h  suite_calc_complements.c  suite_create_matrix.c  suite_determinant.c  suite_eq_matrix.c  suite_inverse_matrix.c  suite_mul_number.c  suite_mult_matrix.c  suite_remove_matrix.c  suite_sub_matrix.c  suite_sum_matrix.c  suite_transpose_matrix.c
smartCalc_v1.0/: README.md
smartCalc_v1.0/src/: README.md  s21_differential.c  s21_evaluate.c  s21_infixToPolish.c
smartCalc_v1.0/src/build-smartCalc_v1_0-Qt_6_5_1_for_macOS-Debug/: .ninja_log  build.ninja  cmake_install.cmake  qtcsettings.cmake
smartCalc_v1.0/src/smartCalc_v1_0/: CMakeLists.txt  calculator.h  calculator.ui  cmake_install.cmake
src/: Makefile  s21_deposit.c  s21_preprocess.c  s21_smartCalc.c  s21_smartCalc.h  utest_smartCalc.c
src/build-smartCalc_v1_0-Qt_6_5_1_for_macOS-Debug/: .ninja_deps  CMakeCache.txt
src/build-smartCalc_v1_0-Qt_6_5_1_for_macOS-Debug/.qt/: QtDeploySupport.cmake
src/build-smartCalc_v1_0-Qt_6_5_1_for_macOS-Debug/smartCalc_v1_0_autogen/: deps  mocs_compilation.cpp
src/smartCalc_v1_0/: CMakeLists.txt.user.c80ac71  calculator.cpp  graph.cpp  graph.h  graph.ui  main.cpp
(+57 files in other folders)
